--- a/hadoop/pom.xml
+++ b/hadoop/pom.xml
@@ -6,8 +6,9 @@
 
     <groupId>com.scloudyy</groupId>
     <artifactId>page-rank</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <build>
+        <finalName>page-rank</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -22,18 +23,10 @@
     </build>
 
     <dependencies>
-
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-mapreduce-client-core</artifactId>
-            <version>2.2.0</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
-            <version>1.2.1</version>
+            <artifactId>hadoop-client</artifactId>
+            <version>3.1.1</version>
         </dependency>
     </dependencies>
 </project>
